--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 *.userosscache
 *.sln.docstates
 .vscode/
-OutputResults/
+~output/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
